@@ -5,6 +5,7 @@ debsig-verify (0.11) UNRELEASED; urgency=low
   * Autoconfiscate build system.
   * Add more warning flags to the default compiler flags.
   * Do not use continuation lines in string literals.
+  * Reformat and reflow --help output.
 
  -- Guillem Jover <guillem@debian.org>  Tue, 19 Aug 2014 10:39:31 +0200
 
